added CSS formatting to druid/engineer/glue html files via adding relevant class attributes. Also added left padding to header in main.css

--- a/druid.html
+++ b/druid.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Hard Thorns</th>
-                    <th>Heart of Thunder</th>
-                    <th>Druid of the Storm</th>
-                    <th>Ball Lightning</th>
-                    <th>Monarch of Storms</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$350</td>
-                    <td>$850</td>
-                    <td>$1,700</td>
-                    <td>$4,500</td>
-                    <td>$60,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Hard Thorns</th>
+                        <th class="top_row">Heart of Thunder</th>
+                        <th class="top_row">Druid of the Storm</th>
+                        <th class="top_row">Ball Lightning</th>
+                        <th class="top_row">Monarch of Storms</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$350</td>
+                        <td>$850</td>
+                        <td>$1,700</td>
+                        <td>$4,500</td>
+                        <td>$60,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Thorn Swarm</th>
+                        <th class="top_row">Heart of Oak</th>
+                        <th class="top_row">Druid of the Jungle</th>
+                        <th class="top_row">Jungle's Bounty</th>
+                        <th class="top_row">Spirit of the Forest</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$350</td>
+                        <td>$1,050</td>
+                        <td>$4,900</td>
+                        <td>$35,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Thorn Swarm</th>
-                    <th>Heart of Oak</th>
-                    <th>Druid of the Jungle</th>
-                    <th>Jungle's Bounty</th>
-                    <th>Spirit of the Forest</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$350</td>
-                    <td>$1,050</td>
-                    <td>$4,900</td>
-                    <td>$35,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Druidic Reach</th>
-                    <th>Heart of Vengeance</th>
-                    <th>Druid of Wrath</th>
-                    <th>Poplust</th>
-                    <th>Avatar of Wrath</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$100</td>
-                    <td>$300</td>
-                    <td>$600</td>
-                    <td>$2,350</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Druidic Reach</th>
+                        <th class="top_row">Heart of Vengeance</th>
+                        <th class="top_row">Druid of Wrath</th>
+                        <th class="top_row">Poplust</th>
+                        <th class="top_row">Avatar of Wrath</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$100</td>
+                        <td>$300</td>
+                        <td>$600</td>
+                        <td>$2,350</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
