--- a/engineer.html
+++ b/engineer.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -58,102 +60,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Sentry Gun</th>
-                    <th>Faster Engineering</th>
-                    <th>Sprockets</th>
-                    <th>Sentry Expert</th>
-                    <th>Sentry Champion</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$500</td>
-                    <td>$400</td>
-                    <td>$575</td>
-                    <td>$2,500</td>
-                    <td>$32,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Sentry Gun</th>
+                        <th class="top_row">Faster Engineering</th>
+                        <th class="top_row">Sprockets</th>
+                        <th class="top_row">Sentry Expert</th>
+                        <th class="top_row">Sentry Champion</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$500</td>
+                        <td>$400</td>
+                        <td>$575</td>
+                        <td>$2,500</td>
+                        <td>$32,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Larger Service Area</th>
+                        <th class="top_row">Deconstruction</th>
+                        <th class="top_row">Cleansing Foam</th>
+                        <th class="top_row">Overclock</th>
+                        <th class="top_row">Ultraboost</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$350</td>
+                        <td>$900</td>
+                        <td>$13,500</td>
+                        <td>$72,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Larger Service Area</th>
-                    <th>Deconstruction</th>
-                    <th>Cleansing Foam</th>
-                    <th>Overclock</th>
-                    <th>Ultraboost</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$350</td>
-                    <td>$900</td>
-                    <td>$13,500</td>
-                    <td>$72,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Oversize Nails</th>
-                    <th>Pin</th>
-                    <th>Double Gun</th>
-                    <th>Bloon Trap</th>
-                    <th>XXXL Trap</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$450</td>
-                    <td>$220</td>
-                    <td>$450</td>
-                    <td>$3,600</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Oversize Nails</th>
+                        <th class="top_row">Pin</th>
+                        <th class="top_row">Double Gun</th>
+                        <th class="top_row">Bloon Trap</th>
+                        <th class="top_row">XXXL Trap</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$450</td>
+                        <td>$220</td>
+                        <td>$450</td>
+                        <td>$3,600</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="support tower_heading">
