--- a/glue.html
+++ b/glue.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -70,102 +72,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Glue Soak</th>
-                    <th>Corrosive Glue</th>
-                    <th>Bloon Dissolver</th>
-                    <th>Bloon Liquefier</th>
-                    <th>Bloon Solver</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$300</td>
-                    <td>$2,000</td>
-                    <td>$5,000</td>
-                    <td>$22,500</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Glue Soak</th>
+                        <th class="top_row">Corrosive Glue</th>
+                        <th class="top_row">Bloon Dissolver</th>
+                        <th class="top_row">Bloon Liquefier</th>
+                        <th class="top_row">Bloon Solver</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td>$2,000</td>
+                        <td>$5,000</td>
+                        <td>$22,500</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Bigger Globs</th>
+                        <th class="top_row">Glue Splatter</th>
+                        <th class="top_row">Glue Hose</th>
+                        <th class="top_row">Glue Strike</th>
+                        <th class="top_row">Glue Storm</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$100</td>
+                        <td>$970</td>
+                        <td>$1,950</td>
+                        <td>$4,000</td>
+                        <td>$16,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Bigger Globs</th>
-                    <th>Glue Splatter</th>
-                    <th>Glue Hose</th>
-                    <th>Glue Strike</th>
-                    <th>Glue Storm</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$100</td>
-                    <td>$970</td>
-                    <td>$1,950</td>
-                    <td>$4,000</td>
-                    <td>$16,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Stickier Glue</th>
-                    <th>Stronger Glue</th>
-                    <th>MOAB Glue</th>
-                    <th>Relentless Glue</th>
-                    <th>Super Glue</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$280</td>
-                    <td>$400</td>
-                    <td>$3,600</td>
-                    <td>$4,000</td>
-                    <td>$24,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Stickier Glue</th>
+                        <th class="top_row">Stronger Glue</th>
+                        <th class="top_row">MOAB Glue</th>
+                        <th class="top_row">Relentless Glue</th>
+                        <th class="top_row">Super Glue</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$280</td>
+                        <td>$400</td>
+                        <td>$3,600</td>
+                        <td>$4,000</td>
+                        <td>$24,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
