added CSS formatting to heli/ice/mermonkey html files via adding relevant class attributes

--- a/ice.html
+++ b/ice.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -66,102 +68,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Permafrost</th>
-                    <th>Cold Snap</th>
-                    <th>Ice Shards</th>
-                    <th>Embrittlement</th>
-                    <th>Super Brittle</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$350</td>
-                    <td>$1,500</td>
-                    <td>$2,300</td>
-                    <td>$28,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Permafrost</th>
+                        <th class="top_row">Cold Snap</th>
+                        <th class="top_row">Ice Shards</th>
+                        <th class="top_row">Embrittlement</th>
+                        <th class="top_row">Super Brittle</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$350</td>
+                        <td>$1,500</td>
+                        <td>$2,300</td>
+                        <td>$28,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Enhanced Freeze</th>
+                        <th class="top_row">Deep Freeze</th>
+                        <th class="top_row">Arctic Wind</th>
+                        <th class="top_row">Snowstorm</th>
+                        <th class="top_row">Absolute Zero</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td>$2,750</td>
+                        <td>$4,000</td>
+                        <td>$16,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Enhanced Freeze</th>
-                    <th>Deep Freeze</th>
-                    <th>Arctic Wind</th>
-                    <th>Snowstorm</th>
-                    <th>Absolute Zero</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$300</td>
-                    <td>$2,750</td>
-                    <td>$4,000</td>
-                    <td>$16,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Larger Radius</th>
-                    <th>Re-Freeze</th>
-                    <th>Cryo Cannon</th>
-                    <th>Icicles</th>
-                    <th>Icicle Impale</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$200</td>
-                    <td>$1,900</td>
-                    <td>$2,750</td>
-                    <td>$30,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Larger Radius</th>
+                        <th class="top_row">Re-Freeze</th>
+                        <th class="top_row">Cryo Cannon</th>
+                        <th class="top_row">Icicles</th>
+                        <th class="top_row">Icicle Impale</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$200</td>
+                        <td>$1,900</td>
+                        <td>$2,750</td>
+                        <td>$30,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="primary tower_heading">
