--- a/mermonkey.html
+++ b/mermonkey.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -62,102 +64,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Trident Efficiency</th>
-                    <th>Trident Swiftness</th>
-                    <th>Abyss Dweller</th>
-                    <th>Abyssal Warrior</th>
-                    <th>Lord of the Abyss</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$150</td>
-                    <td>$250</td>
-                    <td>$1,600</td>
-                    <td>$4,200</td>
-                    <td>$23,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Trident Efficiency</th>
+                        <th class="top_row">Trident Swiftness</th>
+                        <th class="top_row">Abyss Dweller</th>
+                        <th class="top_row">Abyssal Warrior</th>
+                        <th class="top_row">Lord of the Abyss</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$150</td>
+                        <td>$250</td>
+                        <td>$1,600</td>
+                        <td>$4,200</td>
+                        <td>$23,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Sharper Prongs</th>
+                        <th class="top_row">Tidal Chill</th>
+                        <th class="top_row">Riptide Champion</th>
+                        <th class="top_row">Arctic Knight</th>
+                        <th class="top_row">Popseidon</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$200</td>
+                        <td>$300</td>
+                        <td>$2,300</td>
+                        <td>$8,000</td>
+                        <td>$52,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Sharper Prongs</th>
-                    <th>Tidal Chill</th>
-                    <th>Riptide Champion</th>
-                    <th>Arctic Knight</th>
-                    <th>Popseidon</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$200</td>
-                    <td>$300</td>
-                    <td>$2,300</td>
-                    <td>$8,000</td>
-                    <td>$52,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Echosense Precision</th>
-                    <th>Echosense Network</th>
-                    <th>Alluring Melody</th>
-                    <th>Symphonic Resonance</th>
-                    <th>The Final Harmonic</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$380</td>
-                    <td>$2,000</td>
-                    <td>$7,600</td>
-                    <td>$25,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Echosense Precision</th>
+                        <th class="top_row">Echosense Network</th>
+                        <th class="top_row">Alluring Melody</th>
+                        <th class="top_row">Symphonic Resonance</th>
+                        <th class="top_row">The Final Harmonic</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$380</td>
+                        <td>$2,000</td>
+                        <td>$7,600</td>
+                        <td>$25,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="magic tower_heading">
