--- a/heli.html
+++ b/heli.html
@@ -14,9 +14,11 @@
     </header>
     
     <main>
-        <table>
+        <table class="base_stats">
             <thead>
-                <th>Base Stats</th>
+                <tr>
+                   <th colspan="2" class="base_head">Base Stats</th> 
+                </tr>
             </thead>
             <tbody>
                 <tr>
@@ -62,102 +64,100 @@
             </tbody>
         </table>
         
-        <table>
-            <thead>
-                <tr>
-                    <th>Top Upgrade Path</th>
-                    <th>Quad Darts</th>
-                    <th>Pursuit</th>
-                    <th>Razor Rotors</th>
-                    <th>Apache Dartship</th>
-                    <th>Apache Prime</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$800</td>
-                    <td>$500</td>
-                    <td>$1,850</td>
-                    <td>$19,600</td>
-                    <td>$45,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="upgrade_table_container">
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Top Upgrade Path</th>
+                        <th class="top_row">Quad Darts</th>
+                        <th class="top_row">Pursuit</th>
+                        <th class="top_row">Razor Rotors</th>
+                        <th class="top_row">Apache Dartship</th>
+                        <th class="top_row">Apache Prime</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$800</td>
+                        <td>$500</td>
+                        <td>$1,850</td>
+                        <td>$19,600</td>
+                        <td>$45,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <br>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Middle Upgrade Path</th>
+                        <th class="top_row">Bigger Jets</th>
+                        <th class="top_row">IFR</th>
+                        <th class="top_row">Downdraft</th>
+                        <th class="top_row">Support Chinook</th>
+                        <th class="top_row">Special Poperations</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$300</td>
+                        <td>$600</td>
+                        <td>$3,500</td>
+                        <td>$9,500</td>
+                        <td>$30,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <thead>
-                <tr>
-                    <th>Middle Upgrade Path</th>
-                    <th>Bigger Jets</th>
-                    <th>IFR</th>
-                    <th>Downdraft</th>
-                    <th>Support Chinook</th>
-                    <th>Special Poperations</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$300</td>
-                    <td>$600</td>
-                    <td>$3,500</td>
-                    <td>$9,500</td>
-                    <td>$30,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <br>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Bottom Upgrade Path</th>
-                    <th>Faster Darts</th>
-                    <th>Faster Firing</th>
-                    <th>MOAB Shove</th>
-                    <th>Comanche Defense</th>
-                    <th>Comanche Commander</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th>Cost</th>
-                    <td>$250</td>
-                    <td>$350</td>
-                    <td>$3,400</td>
-                    <td>$8,500</td>
-                    <td>$35,000</td>
-                </tr>
-                <tr>
-                    <th>Changes</th>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                    <td>To be added</td>
-                </tr>
-            </tbody>
-        </table>
+            <table class="upgrade_table">
+                <thead>
+                    <tr>
+                        <th class="top_row">Bottom Upgrade Path</th>
+                        <th class="top_row">Faster Darts</th>
+                        <th class="top_row">Faster Firing</th>
+                        <th class="top_row">MOAB Shove</th>
+                        <th class="top_row">Comanche Defense</th>
+                        <th class="top_row">Comanche Commander</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Cost</th>
+                        <td>$250</td>
+                        <td>$350</td>
+                        <td>$3,400</td>
+                        <td>$8,500</td>
+                        <td>$35,000</td>
+                    </tr>
+                    <tr>
+                        <th>Changes</th>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                        <td>To be added</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 
     <footer class="military tower_heading">
